  * fixed segfault when movie is smaller than splashscreen (neg. x-offset)
  * disabled splash-screen when it's larger than current movie anyway.
  * added POSIX sys includes
  * added -lavutil -lmp3lame to auto-detected ffmpeg configuration.
  * disabled PPC duration workaround (only ffmpeg-0.4.9 - LIBAVFORMAT_BUILD 4616)
  * merged-in French qjadeo translation - thanks to R. Doursenaud

xjadeo (0.4.0-rc3) unstable; urgency=low
  * fixed fontfile=<file> config option
  * fixed build --enable-contrib --enable-midi=off

 -- Robin Gareus <robin@gareus.org>  Sat, 02 Dec 2006 02:16:13 +0100

xjadeo (0.4.0-rc2) unstable; urgency=low
  * fixed version to comply with RPM '-' -> '.' -> 0.4.0.rc2 
  * added contrib/tsmm - time stamp movie maker
  * added autogen.sh to debian/rules

 -- Robin Gareus <robin@gareus.org>  Fri, 01 Dec 2006 21:17:03 +0100

xjadeo (0.4.0-rc1) unstable; urgency=low
  * bump version to 0.4.0-rc1

 -- Robin Gareus <robin@gareus.org>  Thu, 30 Nov 2006 22:20:52 +0100

xjadeo (0.3.29-3) unstable; urgency=low
  * qjadeo - round update fps
  * xjadeo remote commands
   - 'window size' -> 'window resize'
   - 'window fixaspect' -> RMB

 -- Robin Gareus <robin@gareus.org>  Thu, 30 Nov 2006 16:46:23 +0100

xjadeo (0.3.29-2) unstable; urgency=low
  * debian control imlib2-dev -> libimlib2-dev
  * xjadeo new remote command 
   - 'window mouse [on|off|toggle]' 
   - 'window letterbox [on|off|toggle]' 

 -- Robin Gareus <robin@gareus.org>  Thu, 30 Nov 2006 01:34:36 +0100

xjadeo (0.3.29-1) unstable; urgency=low
  * updated xjinfo + dtd
   - rational values
   - added sample aspect ratio
   - updated information fields  (title,author,..)
   - xml-version 0.2

 -- Robin Gareus <robin@gareus.org>  Wed, 29 Nov 2006 22:14:05 +0100

xjadeo (0.3.29) unstable; urgency=low
  * qjadeo disable frame notification on disconnect,
    terminate xjadeo when disconnecting.
  * xjadeo remote commands: 'notify off' alias for 'notify disable'