@@ -307,7 +307,13 @@ int open_movie(char* file_name) {
 	duration = (double) (((double) (pFormatCtx->duration))/ (double) AV_TIME_BASE);
 #endif
 	frames = (long) (framerate * duration);
+#if LIBAVFORMAT_BUILD < 4624  // check if correct;
+	tpf = (double) framerate / (double) codec->frame_rate * (double) codec->frame_rate_base;
+#elif LIBAVFORMAT_BUILD <= 4623 // check if correct;
+	tpf = (av_q2d(pFormatCtx->streams[videoStream]->r_frame_rate)/framerate);
+#else
 	tpf = 1.0/(av_q2d(pFormatCtx->streams[videoStream]->time_base)*framerate);
+#endif
 	if (!want_ignstart) 
 		file_frame_offset = (double) framerate*(pFormatCtx->start_time/ (double) AV_TIME_BASE);
 
@@ -385,7 +391,13 @@ void override_fps (double fps) {
 
 	framerate =  fps;
 	frames = (long) (framerate * duration); 
+#if LIBAVFORMAT_BUILD < 4624  // check if correct;
+	tpf = (double) framerate / (double) codec->frame_rate * (double) codec->frame_rate_base;
+#elif LIBAVFORMAT_BUILD <= 4629 // check if correct;
+	tpf = (av_q2d(pFormatCtx->streams[videoStream]->r_frame_rate)/framerate);
+#else
 	tpf = 1.0/(av_q2d(pFormatCtx->streams[videoStream]->time_base)*framerate);
+#endif
 	// recalc offset with new framerate
 	if (smpte_offset) ts_offset=smptestring_to_frame(smpte_offset,midi_connected());
 }
