@@ -6,6 +6,7 @@ xjadeo (0.4.0) unstable; urgency=low
   * added -lavutil -lmp3lame to auto-detected ffmpeg configuration.
   * disabled PPC duration workaround (only ffmpeg-0.4.9 - LIBAVFORMAT_BUILD 4616)
   * merged-in French qjadeo translation - thanks to R. Doursenaud
+  * fixed av_q2d for LIBAVFORMAT_BUILD <= 4623
 
 xjadeo (0.4.0-rc3) unstable; urgency=low
   * fixed fontfile=<file> config option
